# blueetl-core

./: .gitlab-ci.yml  .pylintrc  AUTHORS.txt  CHANGELOG.rst  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: publish-sdist.yml  run-tox.yml
blueetl_core/: __init__.py
doc/source/: api.rst  conf.py  index.rst
src/blueetl_core/: __init__.py  constants.py  etl.py  logging.py  parallel.py  utils.py  version.py
tests/: test_etl_dataframe.py  test_etl_index.py  test_etl_series.py  test_example.py  test_init.py  test_parallel.py  test_utils.py
